--- a/html/Domaci zadatak/facebook.css
+++ b/html/Domaci zadatak/facebook.css
@@ -7,6 +7,42 @@ body {
   background-color: rgb(239, 237, 237);
 }
 
+.aboutUs {
+  color: blue;
+  font-size: 1.5em;
+  float: right;
+  margin-right: 50px;
+  margin-top: 20px;
+}
+
+.header {
+  height: 80px;
+  width: 100%;
+  background-color: #ffff;
+
+  position: fixed;
+  /* top: 20px; */
+  z-index: 1;
+  box-shadow: 3px 3px 12px rgba(0, 0, 0, 0.201);
+}
+.facebook {
+  color: blue;
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+  font-weight: 800;
+  padding: 20px 0 0 30px;
+}
+.register {
+  height: 35px;
+  width: 125px;
+  background-color: rgb(0, 206, 0);
+  color: #ffff;
+  float: right;
+  margin-right: 30px;
+  margin-top: 20px;
+  border-radius: 10px;
+  border: none;
+}
 .main {
   width: 400px;
   height: 300px;
@@ -20,6 +56,8 @@ body {
   color: blue;
   font-size: 50px;
   font-weight: 800px;
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
 }
 
 .main p {
@@ -77,4 +115,10 @@ a {
   text-decoration: none;
   color: blue;
   text-align: center;
+}
+
+.lorem {
+  position: absolute;
+  bottom: -80px;
+  font-size: 1.2em;
 }
