--- a/html/Domaci zadatak/udemy-display/udemy2.css
+++ b/html/Domaci zadatak/udemy-display/udemy2.css
@@ -170,6 +170,7 @@ footer {
   /* background-color: #5624d0; */
   height: 10em;
   width: 100%;
+  position: relative;
 }
 
 .footer1 {
@@ -180,7 +181,22 @@ footer {
   border: 1px solid grey;
   display: flex;
   align-items: center;
+  position: relative;
 }
+
+.wrapper1 {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  /* background-color: aquamarine; */
+  transition: all 1s;
+}
+
+.wrapper1:hover {
+  -webkit-transform: translateX(100%);
+  transform: translateX(100%);
+}
+
 .footer2 {
   height: 50%;
   width: 100%;
@@ -193,16 +209,18 @@ footer {
 
 .lopta1,
 .lopta2 {
+  position: absolute;
   height: 3em;
   width: 3em;
   background-color: red;
   border-radius: 50%;
-  transition: 2s;
+  /* transition: 2s; */
 }
 
-footer:hover .lopta1 {
-  transform: translateX(92.8em);
+.wrapper1:hover .lopta1 {
+  -webkit-transform: translate(-100%);
+  transform: translateX(-100%);
 }
-footer:hover .lopta2 {
+/* footer:hover .lopta2 {
   transform: translateX(-92.8em);
-}
+} */
