--- a/html/Domaci zadatak/udemy-responsive/udemy3.css
+++ b/html/Domaci zadatak/udemy-responsive/udemy3.css
@@ -13,8 +13,13 @@ a:hover {
 }
 
 .header {
+  /* display: flex;
+  justify-content: center;
+  align-items: center; */
+  width: 100%;
   position: sticky;
   top: 0;
+  z-index: 100;
 }
 
 .header1 {
@@ -25,13 +30,47 @@ a:hover {
   justify-content: space-between;
   align-items: center;
   border: 1px solid grey;
+  z-index: 100;
+}
+
+.profile {
+  position: absolute;
+  left: 15px;
+  top: 20px;
+  font-size: 1.5em;
+}
+
+.hamnav {
+  width: 100%;
+  /* background-color: bisque; */
+}
+
+.hamnav,
+.hamburger {
+  display: flex;
+  justify-content: flex-end;
+}
+
+.hamnav label,
+#hamburger {
+  display: none;
+}
+
+.hamitems {
+  /* display: flex; */
+  display: block;
+}
+
+.hamitems a {
+  flex-grow: 1;
 }
 
 .first {
-  width: 15%;
+  width: 10em;
   /* background-color: aliceblue; */
   display: flex;
   align-items: center;
+  justify-content: center;
 }
 
 .link1 {
@@ -267,9 +306,80 @@ footer {
 
     margin-left: 5px;
   }
-  .link1 {
+  body a {
     margin-right: 0;
     margin-left: 5px;
-    font-size: 0.8em;
+    font-size: 1em;
+  }
+
+  .hamnav {
+    display: flex;
+    justify-content: center;
+    overflow: hidden;
+  }
+
+  .hamitems {
+    background-color: rgb(58, 58, 57);
+    width: 100vw;
+    display: none;
+
+    position: absolute;
+    right: 0;
+    /* transform: translateY(-200%);
+    transition: transform 0.5s; */
+    z-index: 10;
+  }
+
+  .hamitems a {
+    display: block;
+    text-align: center;
+    color: #ffff;
+    padding: 10px;
+  }
+
+  .hamnav label {
+    display: inline-block;
+    font-size: 1.5em;
+    position: absolute;
+    top: 15px;
+    right: 25px;
+  }
+
+  .hamnav input:checked ~ .hamitems {
+    display: block;
+
+    transform: translateY(0%);
+  }
+
+  .slika {
+    width: 95%;
+    height: 300px;
+    background-image: url(./4804443.jpg);
+    background-size: 100% 100%;
+    margin: auto;
+    margin-bottom: 2em;
+  }
+
+  .naslov {
+    width: 70%;
+    margin-left: 1em;
+    margin-bottom: 1em;
+  }
+
+  .header1 {
+    background-color: #ffff;
+    height: 10vh;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: 1px solid grey;
+    box-shadow: 0 1px 6px 1px grey;
+  }
+
+  .logo {
+    width: 60%;
+
+    margin-left: 1.5em;
   }
 }
