--- a/html/Domaci zadatak/grid/style.css
+++ b/html/Domaci zadatak/grid/style.css
@@ -6,15 +6,36 @@
 body {
   font-family: Poppins;
 }
+
+h1,
+h3 {
+  font-family: "Poiret One", cursive;
+}
 .slika {
+  display: flex;
   width: 100%;
   height: 100vh;
   margin-bottom: 5em;
+  flex-direction: column;
+  justify-content: flex-end;
+  align-items: center;
+  padding-bottom: 2em;
 
   background-size: cover;
 
   background-image: url(./peakpx.png);
 }
+
+.slika h1 {
+  color: #fff;
+  font-size: 3em;
+}
+
+.slika h3 {
+  color: #fff;
+  margin-bottom: 1em;
+}
+
 header {
   /* background-color: rgb(255, 255, 255); */
   width: 100%;
@@ -33,7 +54,11 @@ header {
   display: flex;
   justify-content: center;
   align-items: center;
+
   column-gap: 20px;
+
+  /* align-self: center;
+  justify-self: center; */
 }
 
 .links a {
@@ -73,15 +98,56 @@ header {
 }
 
 main {
-  width: 70%;
+  width: 80%;
+  height: 50vh;
   margin: auto;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
 
-  column-gap: 20px;
+  column-gap: 40px;
+}
+.child p {
+  text-align: justify;
+  text-indent: 1em;
+}
+
+.child p::first-letter {
+  initial-letter: 2 1;
+
+  margin-right: 0.25em;
+}
+
+.child:nth-of-type(1) {
+  height: 70%;
+  margin: auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.child:nth-of-type(1) h1 {
+  font-size: 3.2em;
 }
 
 .child:nth-of-type(3) {
   display: flex;
-  align-items: flex-end;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.sign {
+  align-self: center;
+}
+
+.dugme {
+  width: 50%;
+  height: 50px;
+  background-color: #fff;
+  cursor: pointer;
+  transition: all 0.3s;
+}
+
+.dugme:hover {
+  background-color: black;
+  color: #fff;
 }
