--- a/html/Domaci zadatak/GP-sajt/style.css
+++ b/html/Domaci zadatak/GP-sajt/style.css
@@ -5,15 +5,26 @@
 
 h1,
 a,
-p {
+p,
+h3 {
   font-family: "Poppins";
 }
 
+.parallax {
+  height: 100vh;
+  overflow-y: auto;
+  overflow-x: hidden;
+  perspective: 10px;
+}
 .slika {
+  position: relative;
   background-image: url(./black-white-dramatic-landscapes-with-city.jpg);
   width: 100%;
   height: 100vh;
   background-size: 100%;
+  transform: translateZ(-10px) scale(2.1);
+  z-index: -1;
+  margin-bottom: 3em;
 }
 
 header {
@@ -69,4 +80,87 @@ header {
 .dugme:hover {
   background-color: orangered;
   color: black;
+}
+
+.text {
+  position: absolute;
+  top: 0;
+
+  height: 100vh;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 3em;
+}
+
+.text h1 {
+  text-align: center;
+  font-weight: 700;
+  font-size: 4em;
+}
+
+.text h3 {
+  text-align: center;
+}
+
+.boxevi {
+  width: 75%;
+  display: flex;
+  /* justify-content: space-between; */
+  gap: 20px;
+}
+
+.box {
+  /* background-color: bisque; */
+  width: 15em;
+  height: 150px;
+  border: 0.5px solid #aaa;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 5px;
+  transition: border 0.2s;
+}
+
+.box:hover {
+  border: 1px solid orange;
+}
+
+.box i {
+  color: orange;
+  font-size: 2em;
+}
+
+.box h3 {
+  color: #fff;
+  font-size: 1.5em;
+}
+
+main {
+  width: 100%;
+  background-color: #fff;
+}
+
+.main1 {
+  width: 80%;
+  height: 60vh;
+  margin: auto;
+  display: grid;
+  column-gap: 20px;
+  grid-template-columns: 1fr 1fr;
+  padding-top: 2em;
+}
+.desno {
+  background-image: url(./camera-photographic-with-smartphone-devices-generative-ai.jpg);
+  background-size: 100% 100%;
+  background-repeat: no-repeat;
+}
+
+.levo {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
 }
