--- a/html/Domaci zadatak/GP-sajt/style.css
+++ b/html/Domaci zadatak/GP-sajt/style.css
@@ -3,6 +3,22 @@
   box-sizing: border-box;
 }
 
+.parallax::-webkit-scrollbar {
+  width: 1.5vw;
+}
+
+.parallax::-webkit-scrollbar-thumb {
+  background-color: #666;
+}
+
+.parallax::-webkit-scrollbar-thumb:hover {
+  background-color: #888;
+}
+
+.parallax::-webkit-scrollbar-track {
+  background-color: #555;
+}
+
 h1,
 h2,
 a,
@@ -18,6 +34,7 @@ li {
   overflow-x: hidden;
   perspective: 10px;
 }
+
 .slika {
   position: relative;
   background-image: url(./bg.png);
@@ -25,7 +42,7 @@ li {
   height: 100vh;
   background-size: 100%;
   transform: translateZ(-10px) scale(2.1);
-  z-index: -1;
+  z-index: -2;
   margin-bottom: 3em;
 }
 
@@ -147,10 +164,16 @@ header {
 }
 
 main {
+  height: 100vh;
   width: 100%;
   background-color: #fff;
+  z-index: 5;
+  /* transform-style: preserve-3d; */
+  perspective: 10px;
 }
-
+main:nth-of-type(1) {
+  height: 100vh;
+}
 .main1 {
   width: 80%;
   height: 70vh;
@@ -158,6 +181,7 @@ main {
   display: grid;
   column-gap: 20px;
   grid-template-columns: 1fr 1fr;
+  grid-template-rows: 8fr 2fr;
   padding-top: 10vh;
   margin-bottom: 5em;
 }
@@ -182,6 +206,7 @@ main {
 
 .levo li {
   background-image: url(./live-scan-orange-tree-at-sign-quality-control-check-mark-voting-button-orange-yellow-icons-removebg-preview.png);
+
   list-style: none;
   padding-left: 2em;
   background-size: 1.7em;
@@ -190,11 +215,39 @@ main {
 }
 
 .traka {
-  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 1em;
+  height: 30vh;
+  background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)) 0% 0% /
+      cover,
+    url(./los-angeles-downtown-buildings-night.jpg) center center fixed;
+}
 
-  height: 20vh;
-  border: 1px solid grey;
-  margin-bottom: 5em;
+.traka h1,
+.traka p {
+  color: #fff;
+}
+
+.traka button {
+  font-size: 1.2em;
+  font-weight: 400;
+  padding: 8px 28px;
+  border: 2px solid #fff;
+  color: #fff;
+  background: transparent;
+  border-radius: 5px;
+  cursor: pointer;
+  margin-top: 0.5em;
+  transition: all 0.2s;
+}
+
+.traka button:hover {
+  background-color: rgb(255, 196, 81);
+  color: black;
+  border: 2px solid rgb(255, 196, 81);
 }
 
 .main2 {
@@ -203,6 +256,7 @@ main {
   display: flex;
   margin: auto;
   gap: 20px;
+  margin-top: 5em;
 }
 
 .main2 .slicica {
@@ -251,6 +305,19 @@ main {
   margin: auto;
 }
 
+.main3 .service {
+  color: #aaa;
+}
+
+.main3 .service::after {
+  display: inline-block;
+  margin: 4px 10px;
+  content: "";
+  width: 120px;
+  height: 1px;
+  background-color: rgb(255, 222, 158);
+}
+
 .main3 .kartice {
   margin-top: 2em;
   height: 80vh;
@@ -277,4 +344,9 @@ main {
 .main3 .kartica:hover {
   box-shadow: 0 0 25px 0 rgba(0, 0, 0, 0.1);
   transform: translateY(-10px);
+}
+
+.main3 .kartica i {
+  font-size: 2em;
+  color: orange;
 }
