--- a/html/Domaci zadatak/GP-sajt/style.css
+++ b/html/Domaci zadatak/GP-sajt/style.css
@@ -442,8 +442,9 @@ main {
   grid-template-columns: 1fr 1fr 1fr;
   grid-gap: 20px;
   margin-top: 2em;
+  margin-bottom: 20vh;
 
-  grid-template-rows: 250px 250px 250px 250px;
+  grid-template-rows: 250px 250px 250px;
 }
 
 .foto1 {
@@ -792,4 +793,81 @@ main {
   align-self: center;
   font-size: 2em;
   grid-row: span 2;
+}
+
+.traka2 {
+  width: 100%;
+  height: 65vh;
+
+  background: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)) 0% 0% /
+      cover,
+    url(./modern-business-building-scenery-touching-sky.jpg) center center fixed;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 0 10em;
+  gap: 0.25em;
+}
+
+.traka2 img {
+  border-radius: 50%;
+  border: 5px solid rgba(204, 204, 204, 0.3);
+}
+
+.traka2 p,
+.traka2 h3 {
+  color: #fff;
+}
+
+.traka2 p:nth-of-type(2) {
+  margin-top: 2em;
+}
+
+.team {
+  width: 80%;
+  height: 100vh;
+  margin: auto;
+}
+
+.ljudi {
+  height: 50vh;
+  display: grid;
+
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-column-gap: 2em;
+}
+
+.covek1 {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  border-radius: 5px;
+  /* border: 0.5px solid rgb(175, 172, 172); */
+  box-shadow: 0px 19px 10px 0px rgba(212, 212, 212, 0.3);
+}
+.covek2 {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  border-radius: 5px;
+  /* border: 0.5px solid rgb(175, 172, 172); */
+  box-shadow: 0px 19px 10px 0px rgba(212, 212, 212, 0.3);
+}
+.covek3 {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  border-radius: 5px;
+  /* border: 0.5px solid rgb(175, 172, 172); */
+  box-shadow: 0px 19px 10px 0px rgba(212, 212, 212, 0.3);
+}
+.covek4 {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  border-radius: 5px;
+  /* border: 0.5px solid rgb(175, 172, 172); */
+  box-shadow: 0px 19px 10px 0px rgba(212, 212, 212, 0.3);
 }
