--- a/html/Vezba/neki sajt/style.css
+++ b/html/Vezba/neki sajt/style.css
@@ -4,8 +4,19 @@
 }
 
 :root {
-  --text-color: rgb(0, 132, 255);
+  --text-color: #fff;
   /* --transition: 1s ease-in-out; */
+}
+
+body {
+  background-color: black;
+}
+
+.wrapper {
+  height: 100vh;
+  overflow-x: hidden;
+  overflow-y: auto;
+  perspective: 10px;
 }
 
 a {
@@ -32,7 +43,8 @@ header {
   height: 10vh;
   display: flex;
   align-items: center;
-  box-shadow: 0 3px 20px 0 #aaa;
+  border-bottom: 1px solid #fff;
+  /* box-shadow: 0 3px 20px 0 #aaa; */
   padding-left: 3em;
   padding-right: 3em;
 }
@@ -42,6 +54,7 @@ header input {
 }
 
 header h1 {
+  color: #fff;
   flex-grow: 3;
 }
 
@@ -85,14 +98,14 @@ header h1 {
   padding: 0.5em 1.5em;
   border-radius: 5px;
   position: relative;
-  background-color: #fff;
+  background-color: black;
   z-index: 1;
   transition: color 0.3s ease-in-out;
   cursor: pointer;
 }
 
 .slide:hover {
-  color: #fff;
+  color: black;
 }
 
 .slide::before {
@@ -113,13 +126,22 @@ header h1 {
   transform: scaleX(1);
 }
 
-.loptica {
-  width: 50px;
-  height: 50px;
-  border-radius: 50%;
-  background-color: red;
+.text {
+  color: #fff;
+  height: 75vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  padding-left: 10%;
+  padding-right: 10%;
 }
 
-.loptica:hover {
-  transform: translateX(100px);
+img {
+  border-radius: 50%;
+
+  width: 100%;
+  /* height: 100%; */
+  transform: translatey(50%) translateZ(-10px) scale(2);
+  box-shadow: 0px -20px 20px 20px lightyellow;
 }
