--- a/javascript/Vezba/Arrays and loops/todo-list.css
+++ b/javascript/Vezba/Arrays and loops/todo-list.css
@@ -1,3 +1,48 @@
+body {
+  font-family: "Poppins";
+}
+.title {
+  font-size: 2em;
+  margin: 0 0 0.5em 0;
+}
 .add-button {
-  background-color: g;
+  background-color: green;
+  border: none;
+  cursor: pointer;
+  color: #fff;
+  font-size: 1em;
+  padding: 10px 20px;
+  border-radius: 5px;
+}
+.input-polje {
+  font-size: 1em;
+  padding: 8px;
+  margin-right: 0.5em;
+}
+
+.js-list {
+  margin-top: 1em;
+  display: grid;
+
+  grid-template-columns: 200px 150px 100px;
+}
+
+.js-list div {
+  font-size: 1.25em;
+}
+
+.remove-button {
+  border: none;
+  background-color: rgb(180, 2, 2);
+  color: #fff;
+  font-size: 0.75em;
+  cursor: pointer;
+  padding: 8px 20px;
+  border-radius: 5px;
+  margin-left: 2em;
+}
+
+.date {
+  padding: 8px;
+  margin-right: 0.5em;
 }
